bin_data_macros/tests/ui/encode-wrong-type.stderr
error[E0277]: the trait bound `&str: View<u32>` is not satisfied
  --> tests/ui/encode-wrong-type.rs:6:29
   |
3  | / bin_data! {
4  | |     #[bin_data(endian = "little")]
5  | |     pub struct WrongType {
6  | |         #[bin_data(encode = "u32 expected")]
   | |                             ^^^^^^^^^^^^^^ the trait `View<u32>` is not implemented for `&str`
...  |
10 | |     }
11 | | }
   | |_- required by a bound introduced by this call
   |
   = help: the trait `View<String>` is implemented for `str`
note: required by a bound in `assert_is_view`
  --> $WORKSPACE/bin_data/src/data.rs
   |
   | pub fn assert_is_view<T: ?Sized, U: View<T>>(x: U) -> U { x }
   |                                     ^^^^^^^ required by this bound in `assert_is_view`
